# code

./: CMakeLists.txt  LICENSE  README.md
include/: object_remoting_mockup.hpp  registry.hpp  router.hpp
src/: cli_intermachine_test.cpp  mkdt_example_client.cpp  mkdt_server.cpp  object_remoting_mockup.cpp  registry.cpp
src/mkdt_lib/: CMakeLists.txt
src/mkdt_lib/include/: common_definitions.hpp  mkdt_lib.hpp  mkdt_protocol.hpp  registry.hpp  router.hpp  router_client.hpp  router_server.hpp  swarm_discovery.hpp
src/mkdt_lib/src/: mkdt_protocol.cpp  registry.cpp  router.cpp  router_client.cpp  router_server.cpp  swarm_discovery.cpp
src/mkdt_lib/test/: mkdt_protocol_test.cpp  registry_test.cpp
src/object_remoting_mockup/: CMakeLists.txt
src/object_remoting_mockup/include/: object_remoting_mockup.hpp  object_remoting_mockup_adapter.hpp
src/object_remoting_mockup/src/: object_remoting_mockup.cpp
src/object_remoting_mockup/test/: object_remoting_mockup_test.cpp
test/: object_remoting_mockup_test.cpp  registry_test.cpp
